--- a/microservice.html
+++ b/microservice.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Superhero Album</title>
-    <!-- Utiliza las referencias de Bootstrap sin integridades hash específicas -->
+    <title>Superhero Album microservices </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 
 <div class="container mt-4">
-    <h1 class="text-center mb-4">Superhero Album</h1>
+    <h1 class="text-center mb-4">Superhero Album-microservices</h1>
 
     <h2>Heroes</h2>
     <div class="row" id="heroes-list"></div>
@@ -19,7 +18,6 @@
     <div class="row" id="threats-list"></div>
 </div>
 
-<!-- Utiliza las referencias de Bootstrap sin integridades hash específicas -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 <script>
