--- a/monolith/index.html
+++ b/monolith/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Superhero App</title>
+    <title>Superhero App monolito</title>
     
-    <!-- Utiliza las referencias de Bootstrap sin integridades hash específicas -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1 class="text-center mt-4 mb-4">Superhero App</h1>
+    <h1 class="text-center mt-4 mb-4">Superhero App monolito</h1>
 
     <h2 class="text-center">Héroes</h2>
     <div class="container">
@@ -21,7 +20,6 @@
         <div class="row" id="threats-list"></div>
     </div>
 
-    <!-- Utiliza las referencias de Bootstrap sin integridades hash específicas -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
